Fix layout shift when making guesses

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-}
 
-* { box-sizing: border-box; }
+@layer base {
+    div {
+        @apply box-border
+    }
+}
